# garden-system

./: Cargo.toml  LICENSE  README.md  avrdude.sh
.cargo/: config.toml
schematic/: .gitignore  library.kicad_sym  schematic.kicad_pro  schematic.kicad_sch
src/: config.rs  control_pad.rs  display.rs  main.rs  menu.rs  serial.rs  system.rs  timer.rs
